# IdleBossHunter

./: .gitignore  .gitmodules  .sonar-project.properties  .travis.yml  CMakeLists.txt  README.md  compile_external.sh  compile_external_release.sh  sonar-project.properties
common/: CMakeLists.txt  ibh_common.cbp
common/src/: base64.cpp  common_components.cpp  common_components.h  constexpr_wyhash.h  ibh_containers.h  lotr_flat_map.h  macros.h  on_leaving_scope.h  random_helper.cpp  random_helper.h  utf.cpp  utf.h  working_directory_manipulation.cpp  working_directory_manipulation.h
common/src/messages/: generic_error_response.cpp  generic_error_response.h  generic_ok_response.cpp  generic_ok_response.h  message.h  update_response.cpp  update_response.h
common/src/messages/battle/: battle_finished_response.cpp  battle_finished_response.h  battle_update_response.cpp  battle_update_response.h  level_up_response.cpp  level_up_response.h  new_battle_response.cpp  new_battle_response.h
common/src/messages/chat/: message_request.cpp  (+3 more)
common/test/: constexpr_wyhash_tests.cpp  main.cpp  message_serialization_tests.cpp  random_helper_tests.cpp  utf_tests.cpp  xxhash_tests.cpp
frontend/: CMakeLists.txt  ibh_frontend.cbp
frontend/cmake_modules/: FindSDL2.cmake
frontend/src/: config.h  config_parsers.cpp  config_parsers.h  emscripten_shell.html  main.cpp  networking.cpp  networking.h  timer.cpp  timer.h
frontend/src/ecs/: components.h  ecs.h
frontend/src/init/: logger_init.cpp  logger_init.h  sdl_init.cpp  sdl_init.h
frontend/src/map_loading/: layer.h  map.cpp  map.h  tileset.cpp  tileset.h
frontend/src/rendering/: shader_utils.cpp  shader_utils.h  sprite.cpp  sprite.h  texture.cpp  texture.h  texture_atlas.cpp  texture_atlas.h  texture_manager.cpp  texture_manager.h
frontend/src/scenes/: scene.cpp  scene.h  scene_manager.h
frontend/test/: constexpr_wyhash_tests.cpp  main.cpp
server/: CMakeLists.txt  create_self_signed_cert.sh  ibh_backend.cbp
server/benchmark/: main.cpp
server/benchmark/benchmark_helpers/: startup_helper.h
server/sql/: init.sql  seed.sql
server/src/: config.h  config_parsers.cpp  config_parsers.h  logger_init.cpp  logger_init.h  lotr_flat_map.h  main.cpp  on_leaving_scope.h  per_socket_data.h  utf.cpp  utf.h  uws_thread.cpp  uws_thread.h  websocket_thread.cpp  websocket_thread.h  working_directory_manipulation.cpp  working_directory_manipulation.h
server/src/asset_loading/: load_assets.cpp  load_assets.h  load_character_select.cpp  load_character_select.h  load_from_database.cpp  load_from_database.h  load_monster_specials.cpp  load_monster_specials.h  load_monsters.cpp  load_monsters.h
server/src/database/: database_pool.cpp  database_pool.h  database_transaction.cpp  database_transaction.h
server/src/discord/: discord_rest.cpp  discord_rest.h  discord_thread.cpp  discord_thread.h
server/src/ecs/: battle_system.cpp  battle_system.h  components.cpp  components.h  resource_system.cpp  resource_system.h
server/src/game_logic/: censor_sensor.cpp  censor_sensor.h  logic_helpers.cpp  logic_helpers.h  random_helper.cpp  random_helper.h
server/src/game_queue_message_handlers/: handler_helpers.cpp  handler_helpers.h  player_enter_handler.cpp  player_enter_handler.h  player_leave_handler.cpp  player_leave_handler.h
server/src/game_queue_messages/: messages.cpp  messages.h  queue_abstraction.h
server/src/message_handlers/: handler_macros.h  playing_passthrough_handler.cpp  playing_passthrough_handler.h
server/src/messages/: generic_error_response.cpp  generic_error_response.h  generic_ok_response.cpp  generic_ok_response.h  message.h  update_response.cpp  update_response.h
server/src/repositories/: banned_users_repository.cpp  banned_users_repository.h  boss_stats_repository.cpp  boss_stats_repository.h  bosses_repository.cpp  bosses_repository.h  character_stats_repository.cpp  character_stats_repository.h  characters_repository.cpp  characters_repository.h  clan_buildings_repository.cpp  clan_buildings_repository.h  clan_member_applications_repository.cpp  clan_member_applications_repository.h  clan_members_repository.cpp  clan_members_repository.h  clan_stats_repository.cpp  clan_stats_repository.h  clans_repository.cpp  clans_repository.h  companies_repository.cpp  companies_repository.h  company_buildings_repository.h  company_member_applications_repository.cpp  company_members_repository.cpp  item_stats_repository.cpp  item_stats_repository.h  items_repository.cpp  items_repository.h  models.h  repository.h  users_repository.cpp  users_repository.h
server/test/: censor_sensor_tests.cpp  custom_server.h  main.cpp  message_serialization_tests.cpp  random_helper_tests.cpp  utf_tests.cpp  xxhash_tests.cpp
server/test/asset_loading_tests/: character_select_tests.cpp
server/test/ecs/: battle_system_tests.cpp  resource_system_tests.cpp
server/test/game_queue_handler_tests/: game_queue_helpers.h  player_enter_tests.cpp  player_leave_tests.cpp
server/test/message_handler_tests/: get_clan_listing_handler_tests.cpp  playing_passthrough_handler_tests.cpp  register_handler_tests.cpp
server/test/repository_tests/: banned_users_repository_tests.cpp  boss_stats_repository_tests.cpp  bosses_repository_tests.cpp  character_stats_repository_tests.cpp  characters_repository_tests.cpp  clan_buildings_repository_tests.cpp  clan_member_applications_repository_tests.cpp  clan_members_repository_tests.cpp  clan_stats_repository_tests.cpp  clans_repository_tests.cpp  companies_repository_tests.cpp  company_buildings_repository_tests.cpp  company_member_applications_repository_tests.cpp  company_members_repository_tests.cpp  company_stats_repository_tests.cpp  item_stats_repository_tests.cpp  items_repository_tests.cpp  users_repository_tests.cpp
server/test/test_helpers/: startup_helper.cpp  startup_helper.h
server/ws_test_client/: delete_character_scenario.py  many_users_scenario.py  second_user.py  user_character_select_scenario.py  user_create_slot_three_scenario.py  user_login_scenario.py  wrong_character_name_scenario.py
(+351 files in other folders)
